# MajorProblem_bot

./: LICENSE  README.md  setup.cfg  setup.py
src/MajorProblem_bot/: MajorProblem_bot.py  praw.ini  requirements.txt
src/MajorProblem_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/MajorProblem_bot_zachicecreamcohn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
