[metadata]
name = MajorProblem_bot-zachicecreamcohn
version = 0.0.1
author = Zach Cohn
author_email = mypythonexperiments@gmail.com
description = a simple Reddit bot that finds comments that mention a major problem and respond: MAJOR PROBLEM!
long_description = file: README.md 
long_description_content_type = text/markdown
url = https://github.com/zachicecreamcohn/MajorProblem_bot
project_urls = 
    Bug Tracker = https://github.com/zachicecreamcohn/MajorProblem_bot/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src